--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-	position: relative;
 	width: auto;
 	height: auto;
+	border: none;
+	position: relative;
+	box-sizing: border-box;
+	color: white;
+	background-color: dimgray;
 	font-family: 'Fira Sans', sans-serif;
 }
 
@@ -67,8 +70,7 @@ quick facade classes, use to quickly set elements behaviour
 
 /* setting up basic tags generic styles */
 html, body {
-	width: 100%;
-	height: 100%;
+	height: 99%;
 }
 
 a {
