--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -14,12 +14,10 @@ nav, .nav-item, .nav-item a {
 
 .nav-item a:hover {
 	color: black;
-	background-color: white;
+	background-color: antiquewhite;
 }
 
 #view {
-	width: 100%;
-	height: 100%;
 	height: calc(100% - var(--nav-height));
 }
 
